[gd_scene load_steps=3 format=3 uid="uid://btusqvrknfhdc"]

[ext_resource type="Theme" uid="uid://bpcfuixup341c" path="res://themes/main_theme.tres" id="1_hbrpa"]
[ext_resource type="Script" uid="uid://b4k5vgyo5r37c" path="res://scripts/Scoreboard/scoreboard_display.gd" id="2_hfhdr"]

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hbrpa")
script = ExtResource("2_hfhdr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "This text should get replaced by code"

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
z_index = 13
layout_mode = 2
size_flags_vertical = 3
columns = 7
column_titles_visible = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back to menu"

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="PostSampleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Post Sample Score"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PostSampleButton" to="." method="_on_post_sample_button_pressed"]
